Tue Dec 28 13:35:20 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/zlib/zlib.c (rb_deflate_s_deflate, rb_inflate_s_inflate): ensure
	  freeing internal zstreams.  fixed: [ruby-dev:25309]

	* ext/zlib/zlib.c (rb_deflate_init_copy): replace rb_deflate_clone.

Mon Dec 27 20:02:14 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: fix SEGV bug when deleting Tk interp

	* ext/tk/lib/multi-tk.rb: ditto

Mon Dec 27 16:54:05 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_x509name.c (Init_ossl_x509name): should use
	  rb_hash_new to get exactly a Hash. fix [ruby-dev:25325].

Mon Dec 27 15:29:12 2004  Minero Aoki  <aamine@loveruby.net>

	* test/fileutils/test_fileutils.rb (cp_r): tested wrong file name.
	  [ruby-dev:25339]

Mon Dec 27 15:15:18 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (mv): should raise error when moving a
	  directory to the (empty) directory. [ruby-talk:124368]

	* lib/fileutils.rb (mv): wrongly did not overwrite file on Win32
	  platforms.

Mon Dec 27 14:36:20 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (NUM2RLIM, RLIM2NUM): Without SIZEOF_RLIM_T is not error.
	  fixed: [ruby-dev:25346]

Sun Dec 26 16:21:39 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (Net::IMAP::PlainAuthenticator): added a new class
	  to support the PLAIN authentication mechanism. Thanks, Benjamin
	  Stiglitz.

Fri Dec 24 23:27:18 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/image.rb: TkPhotoImage#cget bug fix

Fri Dec 24 03:06:13 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_reopen, rb_io_reopen): prohibit to change access mode for
	  special IO ports.  [ruby-dev:25225]

	* io.c (next_argv): reduce use of stdio.

Fri Dec 24 02:22:53 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (syck_loader_transfer): check type conversion.

	* ext/syck/rubyext.c (syck_parser_assign_io, rb_new_syck_node): duck
	  typing.
